# demand-forecasting

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
data/02_intermediate/: preprocessed_companies.pq  preprocessed_shuttles.pq
data/03_primary/: PROCESSED_FOOD_WEEKLY.pq  PROCESSED_STORE_ITEM_WEEKLY.pq  model_input_table.pq  processed_data.pq
data/06_models/regressor.pickle/2024-04-19T00.48.16.945Z/: regressor.pickle
data/07_model_output/: FOOD_WEEKLY.out  STORE_ITEM_DAILY.out  STORE_ITEM_WEEKLY.out  output.out
data/08_reporting/: RESULTS_FOOD_WEEKLY.pq  RESULTS_STORE_ITEM_DAILY.pq  RESULTS_STORE_ITEM_WEEKLY.pq  models_results.pq
notebooks/: analysis_of_results.ipynb  initial_analysis.ipynb
src/demand_forecasting/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/demand_forecasting/pipelines/data_preprocessing/: README.md  __init__.py  nodes.py  pipeline.py
src/demand_forecasting/pipelines/get_results/: README.md  nodes.py  pipeline.py
src/demand_forecasting/utils/: data_preparation.py  data_preprocessing.py  data_separation.py  decorators.py  get_models_results.py  get_results.py  global_data.py  metrics.py  models.py  models_validation.py
