[tool.kedro]
package_name = "demand_forecasting"
project_name = "Demand Forecasting"
kedro_init_version = "0.19.4"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[tool.poetry]
name = "demand-forecasting"
version = "0.1.0"
description = "Trabalho de Graduação do curso de Análise e Desenvolvimento de Sistemas, da Fatec Rio Preto."
authors = ["lborgatow <lborgatow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
kedro = "0.19.4"
polars = "0.20.21"
numpy = "1.26.4"
kedro-datasets = "3.0.0"
pyarrow = "13.0.0"
statsmodels = "0.14.2"
sktime = "0.28.0"
darts = "0.29.0"
optuna = "3.6.1"
prophet = "1.1.5"
xgboost = "2.0.3"
pytimetk = "0.4.0"

[tool.poetry.group.dev.dependencies]
ipython = "8.23.0"
notebook = "7.1.3"
ipykernel = "6.29.4"


[tool.poetry.scripts]
demand-forecasting = "demand_forecasting.__main__:main"

[tool.poetry.plugins."kedro.hooks"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"